@@ -1,3 +1,7 @@
+1651.	[bug]		dig: process multiple dash options.
+
+1650.	[bug]		dig, nslookup: flush standard out after each command.
+
 1649.	[bug]		Silence "unexpected non-minimal diff" message.
 			[RT #11206]
 
